kubernetes/apps/selfhosted/homepage/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
  namespace: selfhosted
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media
  egress:
    - toEntities:
        - kube-apiserver
        - cluster
    - toCIDRSet:
        - cidr: 192.168.1.254/32
        - cidr: 10.0.40.50/32
